--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "dependencies": {
     "systemjs": "^0.11.2"
   },
-  "devDependencies": {
-    "gulp": "^3.8.10",
-    "gulp-6to5": "^2.0.2"
-  },
+  "devDependencies": {},
   "scripts": {
+    "main": "6to5 app.js"
     "test": "jasmine"
   },
   "repository": {
