--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "app.js",
   "dependencies": {
     "6to5": "^2.13.1",
-    "systemjs": "^0.11.2"
+    "jadum": "^1.4.0",
+    "express": "^4.11.2",
+    "systemjs": "^0.11.2",
+    "taunus": "^4.1.6",
+    "taunus-express": "^2.1.0"
   },
   "devDependencies": {
     "gulp-sourcemaps": "^1.3.0"
