--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "taunus-express": "^2.1.0"
   },
   "devDependencies": {
+    "gulp-shell": "^0.2.11",
     "gulp-sourcemaps": "^1.3.0"
   },
   "scripts": {
