--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "An acrostic poem generator",
   "main": "app.js",
   "dependencies": {
-    "6to5": "^3.5.3",
-    "jadum": "^1.4.0",
+    "babel": "^4.3.0",
     "express": "^4.11.2",
+    "jadum": "^1.4.0",
     "systemjs": "^0.11.2",
     "taunus": "^4.1.6",
     "taunus-express": "^2.1.0"
@@ -16,7 +16,7 @@
     "gulp-sourcemaps": "^1.3.0"
   },
   "scripts": {
-    "main": "6to5 app.js",
+    "main": "babel app.js",
     "test": "jasmine"
   },
   "repository": {
